# pangeos_uq

./: .gitignore  .gitpod.Dockerfile  .gitpod.yaml  .gitpod.yml  .pre-commit-config.yaml  README.md  environment.yml  get_pkgs.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: 01-Introduction_Leaf_Optics.ipynb  02-Experiments_with_PROSAIL.ipynb  03-Fitting_PROSPECT.ipynb  04-MCMC_Inversion.ipynb  05-Bayesian_Inversion_PROSPECT.ipynb  06-emulation_GP.ipynb  07-GPs_as_regressors.ipynb  08-Sentinel2_parameter_retrieval.ipynb  09-PiccoloDoppioInversion.ipynb
recipe/: meta.yaml
src/: todo.md
src/pangeos_uq/: __init__.py  mcmc.py  pangeos_uq.py  param_retrieval.py  param_retrieval_gui.py  prosail_funcs.py  sixs_lut.py
src/pangeos_uq/data/: archetype_statistics.npz  convert_srf.py  piccolo_refl.csv
